Fix logo width in dark mode

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -42,10 +42,6 @@ div.highlight pre, table.highlighttable pre {
         background-color: #21272E;
     }
 
-    .logo {
-        max-width: 95%;
-    }
-
     div.sphinxsidebar p {
         color: #adbac7;
     }
